# a2a_google_sdk

./: .gitignore  main.py  pyproject.toml  run.py
agents/: SEO_agent.py  editor_agent.py  outline_agent.py  seo_agent.py  writer_agent.py
core/: config.py
llm/: gemini_client.py
orchestrator/: orchestrator.py
