[project]
name = "a2a-google-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk==0.2.5",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "starlette>=1.3.0",
    "uvicorn>=0.49.0",
]
